@@ -181,10 +181,12 @@ if ($_POST) {
 			config_lock();
 			$retval |= rc_exec_service("rsync_local");
 			$retval |= rc_update_service("cron");
-			$retval |= rc_exec_script("su -m {$rsynclocal['who']} -c '/bin/sh /var/run/rsync_local_{$rsynclocal['uuid']}.sh'");
 			config_unlock();
+			if ($retval == 0) {
+				updatenotify_clear("rsynclocal", $rsynclocal['uuid']);
+			}
 
-			updatenotify_clear("rsynclocal", $rsynclocal['uuid']);
+			$retval |= rc_exec_script("su -m {$rsynclocal['who']} -c '/bin/sh /var/run/rsync_local_{$rsynclocal['uuid']}.sh'");
 
 			$savemsg = get_std_save_message($retval);
 		} else {
